--- a/Portefolio/index.html
+++ b/Portefolio/index.html
@@ -6,7 +6,7 @@
     <title>Mon Portfolio - Nathanaël Villard</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style-B.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
@@ -29,7 +29,7 @@
     <!-- ====================== ACCUEIL ====================== -->
     <section id="accueil" class="section">
         <div class="container">
-            <img src="images/pergaud.jpg" alt="Photo professionnelle" class="photo">
+            <img src="images/handball.jpg" alt="Photo professionnelle" class="photo">
             <h1>Bonjour, je suis <span>Nathanaël Villard</span></h1>
             <p>Étudiant en <strong>BTS SIO</strong> au Lycée Louis Pergaud</p>
             <p>Développeur passionné par la cybersécurité et l'innovation numérique.</p>
