--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- Rajouter des animations -->
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Portefolio - Nathanaël Villard</title>
+    <title>Mon Portfolio - Nathanaël Villard</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -66,7 +66,7 @@
     </section>
 
     <!-- ====================== CV ====================== -->
-    <section id="cv" class="section">
+    <section id="cv" class="section"> <!-- Mettre mon CV -->
         <div class="container">
             <h2>Mon CV</h2>
             <div class="skills">
@@ -143,7 +143,7 @@
                     <p>Sensibilisation à la protection des données personnelles et au RGPD.</p>
                     <a href="https://www.cnil.fr/fr/les-controles-de-la-cnil-en-2025" target="_blank">Voir le programme</a>
                 </div>
-            </div>
+            </div> <!-- Rajouter écri+ et les pdf de la CNIL/ANSEE -->
         </div>
     </section>
 
@@ -153,19 +153,19 @@
             <h2>Mes projets</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="images/projet1.jpg" alt=" ">
+                    <img src="images/Portfolio.jpg" alt="Capture d'écran de mon portfolio">
+                    <h3>Mon portfolio</h3>
+                    <p><strong>Technos :</strong> HTML et CSS</p>
+                    <p><strong>Mission :</strong> Créer un site responsive avec un design personnalisé et des animations légères.</p>
+                    <a href="https://github.com/FlyBlitzz/HTML-et-CSS/tree/master/Portfolio" target="_blank">Code sur GitHub</a>
+                </div>
+
+                <div class="card">
+                    <img src="images/" alt=" ">
                     <h3>Projet en cours</h3>
                     <p><strong>Technos :</strong> à définir</p>
                     <p><strong>Mission :</strong> projet en préparation, détails à venir.</p>
                     <a href="https://github.com/FlyBlitzz" target="_blank">Voir mon GitHub</a>
-                </div>
-
-                <div class="card">
-                    <img src="images/Portefolio.jpg" alt="Capture d'écran de mon portfolio">
-                    <h3>Mon portfolio</h3>
-                    <p><strong>Technos :</strong> HTML et CSS</p>
-                    <p><strong>Mission :</strong> Créer un site responsive avec un design personnalisé et des animations légères.</p>
-                    <a href="https://github.com/FlyBlitzz/HTML-et-CSS/tree/master/Portefolio" target="_blank">Code sur GitHub</a>
                 </div>
             </div>
         </div>
@@ -182,20 +182,14 @@
             <div class="articles">
                 <div class="article">
                     <h4>Article à venir n°1</h4>
-                    <p><strong>Source :</strong> <a href="#" target="_blank">Lien à ajouter</a></p>
-                    <p>
-                        Résumé : j’ajouterai ici une synthèse de l’article (contexte, enjeux, 
-                        concepts importants et ce que j’en retiens pour ma pratique).
-                    </p>
+                    <p><strong>Source :</strong> <a href="#" target="_blank"></a></p>
+                    <p>Résumé : </p>
                 </div>
                 
                 <div class="article">
                     <h4>Article à venir n°2</h4>
-                    <p><strong>Source :</strong> <a href="#" target="_blank">Lien à ajouter</a></p>
-                    <p>
-                        Résumé : cette zone servira à présenter un deuxième article (ou vidéo, podcast, 
-                        rapport).
-                    </p>
+                    <p><strong>Source :</strong> <a href="#" target="_blank"></a></p>
+                    <p>Résumé : </p>
                 </div>
             </div>
         </div>
