--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -119,6 +119,36 @@
             <h2>Certifications</h2>
             <div class="cards">
                 <div class="card">
+                    <i class="fas fa-user-shield fa-2x"></i>
+                    <h3>CNIL – Données & vie privée</h3>
+                    <p><strong>Statut :</strong> Validé</p>
+                    <p>RGPD, droits, sécurité et protection des données.</p>
+                    <div class="card-links">
+                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 1.pdf" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-file-pdf"></i> Le RGPD et ses notions clés (PDF)
+                        </a>
+                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 2.pdf" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-file-pdf"></i> Les principes de la protection des données (PDF)
+                        </a>
+                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 3.pdf" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-file-pdf"></i> Les responsabilités des acteurs (PDF)
+                        </a>
+                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 4.pdf" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-file-pdf"></i> Le DPO et les outils de la conformité (PDF)
+                        </a>
+                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 5.pdf" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-file-pdf"></i> Les collectivités territoriales (PDF)
+                        </a>
+                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 6.pdf" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-file-pdf"></i> Travail et données personnelles (PDF)
+                        </a>
+                        <a href="https://www.cnil.fr/fr/comprendre-le-rgpd/le-mooc-de-la-cnil" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> Ressources CNIL
+                        </a>
+                    </div>
+                </div>
+
+                <div class="card">
                     <i class="fas fa-shield-alt fa-2x"></i>
                     <h3>ANSSI – SecNumAcadémie</h3>
                     <p><strong>Statut :</strong> Validé</p>
@@ -146,36 +176,6 @@
                 </div>
 
                 <div class="card">
-                    <i class="fas fa-user-shield fa-2x"></i>
-                    <h3>CNIL – Données & vie privée</h3>
-                    <p><strong>Statut :</strong> Validé</p>
-                    <p>RGPD, droits, sécurité et protection des données.</p>
-                    <div class="card-links">
-                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 1.pdf" target="_blank" rel="noopener noreferrer">
-                            <i class="fa-solid fa-file-pdf"></i> Module 1 (PDF)
-                        </a>
-                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 2.pdf" target="_blank" rel="noopener noreferrer">
-                            <i class="fa-solid fa-file-pdf"></i> Module 2 (PDF)
-                        </a>
-                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 3.pdf" target="_blank" rel="noopener noreferrer">
-                            <i class="fa-solid fa-file-pdf"></i> Module 3 (PDF)
-                        </a>
-                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 4.pdf" target="_blank" rel="noopener noreferrer">
-                            <i class="fa-solid fa-file-pdf"></i> Module 4 (PDF)
-                        </a>
-                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 5.pdf" target="_blank" rel="noopener noreferrer">
-                            <i class="fa-solid fa-file-pdf"></i> Module 5 (PDF)
-                        </a>
-                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation CNIL Module 6.pdf" target="_blank" rel="noopener noreferrer">
-                            <i class="fa-solid fa-file-pdf"></i> Module 6 (PDF)
-                        </a>
-                        <a href="https://www.cnil.fr/fr/comprendre-le-rgpd/le-mooc-de-la-cnil" target="_blank" rel="noopener noreferrer">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> Ressources CNIL
-                        </a>
-                    </div>
-                </div>
-
-                <div class="card">
                     <i class="fa-solid fa-pen-nib fa-2x"></i>
                     <h3>Écri+</h3>
                     <p><strong>Statut :</strong> En cours</p>
@@ -198,7 +198,7 @@
                 <div class="card">
                     <img src="Images/portfolio.jpg" alt="Capture d'écran de mon portfolio">
                     <h3>Mon portfolio</h3>
-                    <p><strong>Technos :</strong> HTML et CSS</p>
+                    <p><strong>Technologies :</strong> HTML et CSS</p>
                     <p><strong>Mission :</strong> Créer un site responsive avec un design personnalisé et des animations légères.</p>
                     <a href="https://github.com/FlyBlitzz/HTML-et-CSS/tree/master/Portfolio" target="_blank" rel="noopener noreferrer">
                         Code sur GitHub
@@ -210,7 +210,7 @@
                         <i class="fa-solid fa-diagram-project"></i>
                     </div>
                     <h3>Projet à venir</h3>
-                    <p><strong>Technos :</strong> à définir</p>
+                    <p><strong>Technologies :</strong> à définir</p>
                     <p><strong>Mission :</strong> détails à venir.</p>
                     <a href="https://github.com/FlyBlitzz" target="_blank" rel="noopener noreferrer">Voir mon GitHub</a>
                 </div>
