--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -196,7 +196,7 @@
             <h2>Mes projets</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="Images/portfolio.jpg" alt="Capture d'écran de mon portfolio">
+                    <img src="Images/portfolio.png" alt="Capture d'écran de mon portfolio">
                     <h3>Mon portfolio</h3>
                     <p><strong>Technologies :</strong> HTML et CSS</p>
                     <p><strong>Mission :</strong> Créer un site responsive avec un design personnalisé et des animations légères.</p>
