--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,9 +15,9 @@
     <header>
         <nav id="navbar" aria-label="Navigation principale">
             <ul>
-                <li><a href="#accueil" class="active">Accueil</a></li>
+                <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#apropos">À propos</a></li>
-                <li><a href="#cv">CV</a></li>
+                <li><a href="cv.html">CV</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#veille">Veille</a></li>
@@ -25,14 +25,14 @@
                 <li><a href="#passions">Passions</a></li>
             </ul>
         </nav>
-    </header>
+    </header>   
 
     <!-- ====================== ACCUEIL ====================== -->
     <section id="accueil" class="section">
         <div class="container">
             <img src="Images/handball.jpg" alt="Photo de Nathanaël Villard" class="photo">
             <h1>Bonjour, je suis <span>Nathanaël Villard</span></h1>
-            <p>Étudiant en <strong>BTS SIO</strong> au Lycée Louis Pergaud.</p>
+            <p>Étudiant en <strong>BTS Services Informatiques aux Organisations (SIO)</strong> au Lycée Louis Pergaud.</p>
             <p>Développeur passionné par l'innovation numérique.</p>
             <a href="#apropos" class="btn">En savoir plus</a>
         </div>
@@ -45,7 +45,7 @@
             <div class="apropos-content">
                 <div class="text">
                     <p>
-                        Actuellement en BTS SIO au Lycée Louis Pergaud, je me forme aux métiers du numérique.
+                        Actuellement en <strong>BTS Services Informatiques aux Organisations (SIO)</strong> au Lycée Louis Pergaud — une formation bac+2 axée sur la gestion et le développement des systèmes d’information dans les entreprises — je me forme aux métiers du numérique.
                         Mon objectif est de devenir <strong>développeur informatique</strong>, avec un intérêt particulier
                         pour les tests de logiciels et de jeux vidéo.
                     </p>
@@ -65,53 +65,6 @@
             </div>
         </div>
     </section>
-
-<!-- ====================== CV ====================== -->
-<section id="cv" class="section">
-    <div class="container">
-        <h2>Mon CV</h2>
-
-        <div class="cv-container">
-            <div class="cv-viewer" aria-label="Aperçu du CV en PDF">
-                <iframe
-                    src="Docs/CV_Nathanaël_Villard.pdf#view=FitH"
-                    title="CV de Nathanaël Villard"
-                    loading="lazy">
-                </iframe>
-
-                <div class="cv-fallback">
-                    <p>Si le PDF ne s’affiche pas :</p>
-                    <p>
-                        <a class="link" href="Docs/CV_Nathanaël_Villard.pdf" target="_blank" rel="noopener noreferrer">
-                            → Ouvrir le CV (PDF)
-                        </a>
-                    </p>
-                    <p>
-                        <a class="link" href="Images/CV_Nathanaël_Villard.jpg" target="_blank" rel="noopener noreferrer">
-                            → Voir en image
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="formation">
-            <h3>Formation</h3>
-            <div class="item">
-                <h4>BTS Services Informatiques aux Organisations (SIO)</h4>
-                <p>Lycée Louis Pergaud – En cours</p>
-            </div>
-            <div class="item">
-                <h4>Baccalauréat Général – Spécialités Mathématiques, Physique-Chimie et Numérique et Sciences Informatiques</h4>
-                <p>Lycée Algoud Laffemas – 2022 → 2025</p>
-            </div>
-            <div class="item">
-                <h4>Diplôme National du Brevet – Mention très bien</h4>
-                <p>Collège Marcel Pagnol – 2022</p>
-            </div>
-        </div>
-    </div>
-</section>
 
     <!-- ====================== CERTIFICATIONS ====================== -->
     <section id="certifications" class="section">
@@ -159,6 +112,21 @@
                         </a>
                         <a href="https://secnumacademie.gouv.fr/" target="_blank" rel="noopener noreferrer">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i> Plateforme
+                        </a>
+                    </div>
+                </div>
+  
+                <div class="card">
+                    <i class="fa-solid fa-lock fa-2x"></i>
+                    <h3>EBIOS Risk Manager</h3>
+                    <p><strong>Statut :</strong> Validé</p>
+                    <p>Méthode d’analyse de risques cyber en 5 étapes (expression du besoin, étude de l’existant, scénarios de risque, sécurité opérationnelle, plan d’action).</p>
+                    <div class="card-links">
+                        <a href="Docs/VILLARD Nathanaël SIO1 Attestation EBIOS.pdf" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-file-pdf"></i> Attestation (PDF)
+                        </a>
+                        <a href="https://lms.club-ebios.org" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> Documentation EBIOS
                         </a>
                     </div>
                 </div>
@@ -261,7 +229,7 @@
                 <div class="passion">
                     <i class="fas fa-gamepad fa-3x"></i>
                     <h3>Jeux vidéo</h3>
-                    <p>Jeux en ligne et compétitifs : ils stimulent ma réactivité, ma stratégie et mon intérêt pour la création de jeux.</p>
+                    <p>Je pratique principalement des jeux compétitifs comme <strong>Valorant</strong>, <strong>Rocket League</strong> et <strong>Fortnite</strong>. Ils développent ma réactivité, ma stratégie en équipe, et nourrissent mon intérêt pour la conception et les tests de jeux vidéo.</p>
                 </div>
             </div>
         </div>
